# arbor

./: .gitattributes  .gitignore  README.md  TASKS.md  arbor-v2-comprehensive-plan.md  arbor.config  pyproject.toml
arbor/: __init__.py  cli.py  config.py  orchestrator.py  recovery.py  scheduler.py  wal.py
arbor/agents/: __init__.py  audit.py  base.py  dev.py  infra.py  qa.py  research.py
arbor/prompts/: __init__.py  agents.py  audit.py  orchestrator.py  reviewers.py
arbor/reviewers/: __init__.py  base.py  code.py  fact.py  infra.py  qa.py
tests/: conftest.py  test_audit.py  test_cli.py  test_colocation.py  test_depth.py  test_memory.py  test_orchestrator.py  test_recovery.py  test_reviewers.py  test_scheduler.py  test_wal.py
